[package]
name = "vault_rag"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
reagent-rs = "0.2.11"
tokio = { version = "1.52.3", features = ["full"] }
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
qdrant-client = "1.13"
reqwest = { version = "0.12", features = ["json"] }
dirs = "6.0"
